<resources>
    <string name="app_name">GastroGenius</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="daily_meal">Daily meal</string>
    <string name="favourite">favourite</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="my_cart">My_cart</string>
    <string name="correo_gmail_com">correo@gmail.com</string>
    <string name="s_t_c">S T C</string>
    <string name="search_resets">search resets</string>
    <string name="Bienvenido">Bienvenido</string>
    <string name="que_buscas">¿ Que buscas ?</string>
    <string name="nombre_reseta">Nombre Reseta</string>
    <string name="_5dp">5dp</string>
</resources>