<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment"
    android:background="@color/mediumgray">

   <androidx.constraintlayout.widget.ConstraintLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content">

      <EditText
          android:id="@+id/editText3"
          android:layout_width="300dp"
          android:layout_height="wrap_content"
          android:layout_margin="6dp"
          android:background="@drawable/search_bg"
          android:drawableEnd="@drawable/busqueda1"
          android:drawableStart="@drawable/busqueda1"
          android:drawablePadding="9dp"
          android:fontFamily="@font/amita"
          android:hint="@string/search_resets"
          android:padding="10dp"
          android:textColor="@color/white"
          android:textColorHint="@color/white"
          android:textSize="13sp"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent" />

      <ImageView
          android:layout_width="65dp"
          android:layout_height="52dp"
          android:background="@drawable/search_bg"
          android:padding="10dp"
          android:src="@drawable/perfil"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintHorizontal_bias="0.6"
          app:layout_constraintStart_toEndOf="@+id/editText3"
          app:layout_constraintTop_toTopOf="parent"
          app:layout_constraintVertical_bias="0.052" />

      <TextView
          android:id="@+id/text1"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_margin="6dp"
          android:fontFamily="@font/amarante"
          android:text="@string/Bienvenido"
          android:textColor="@color/white"
          android:textSize="35sp"
          app:layout_constraintTop_toBottomOf="@+id/editText3"
          tools:layout_editor_absoluteX="16dp" />

      <TextView
          android:id="@+id/textView7"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginStart="16dp"
          android:fontFamily="@font/amita"
          android:text="@string/que_buscas"
          android:textColor="@color/white"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/text1" />

      <!-- RecyclerView Horizontal -->

      <!-- RecyclerView Vertical -->
      <androidx.recyclerview.widget.RecyclerView
          android:id="@+id/home_hor_rec"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_margin="6dp"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/textView7"
          app:layout_constraintVertical_bias="0.086"
          tools:ignore="MissingConstraints"
          tools:layout_editor_absoluteX="6dp" />

      <androidx.recyclerview.widget.RecyclerView
          android:id="@+id/home_ver_rec"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_margin="6dp"
          app:layout_constraintTop_toBottomOf="@+id/home_hor_rec"
          app:layout_constraintBottom_toBottomOf="parent" />

   </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>
